# akademy

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt  setup.py
akademy/common/: project_paths.py  typedefs.py  utils.py
akademy/data/: SPY.csv
akademy/models/: __init__.py  experience_replay_memory.py  ohlcv.py  trade.py  trade_action.py
akademy/models/agents/: __init__.py  dqn_agent.py
akademy/models/base_models/: __init__.py  agent.py  epsilon_greedy.py  network_base.py  replay_memory.py  trade_env_base.py
akademy/models/envs/: __init__.py  trade_env.py
akademy/models/networks/: __init__.py  three_layer_linear.py
tests/: test_data.py  test_envs.py
tests/helpers/: data_utils.py  model_utils.py
tests/test_common/: test_project_paths.py  test_trade_action.py  test_utils.py
tests/test_models/: test_dqn_agent.py
