[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "akademy"
version = "0.1.5"
authors = [
  { name="Zack West", email="alphazwest@gmail.com" },
]
description = "akademy: A Reinforcement Learning Framework"
readme = "README.md"
requires-python = ">=3.7"
license = {text = "BSD-3-Clause"}
keywords=[
        "reinforcement learning", "quantitative trading", "fintech",
        "trading bot", "algorithmic trading", "finance", "automated trading",
        "neural networks", "artificial intelligence", "machine learning"
]
dependencies = [
        "pandas==1.5.2",
        "torch==1.13.1",
        "gymnasium==0.27.0"
]

# see here: https://pypi.org/classifiers/
classifiers = [
        "Development Status :: 3 - Alpha",
        "Topic :: Scientific/Engineering :: Artificial Intelligence",
        "License :: OSI Approved :: BSD License",
        "Programming Language :: Python :: 3",
        "Programming Language :: Python :: 3.7",
        "Programming Language :: Python :: 3.8",
        "Programming Language :: Python :: 3.9",
        "Programming Language :: Python :: 3.10",
        "Operating System :: OS Independent",
        "Natural Language :: English",
        "Intended Audience :: Financial and Insurance Industry",
        "Intended Audience :: Developers",
        "Intended Audience :: Science/Research",

        # optional GPU usage, but 11.7 CUDA required for GPU via PyTorch
        "Environment :: GPU :: NVIDIA CUDA :: 11.7"
]

[project.urls]
"Homepage" = "https://github.com/alphazwest/akademy"
"Bug Tracker" = "https://github.com/alphazwest/akademy/issues"
